# pynvjpeg2k

./: .clang-format  .gitignore  .pdm.toml  CMakeLists.txt  Makefile  README.md  build_setuptools.py  package-lock.json  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
libnvjpeg/include/: nvjpeg2k.h  nvjpeg2k_version.h
libnvjpeg/lib/: libnvjpeg2k.so.0  libnvjpeg2k.so.0.6.0.28
nvjpeg2k/: CMakeLists.txt  nvjpeg2k_dec_pipelined.cpp  nvjpeg2k_dec_pipelined.h
pynvjpeg/: dicom.cpp  dicom.h  nvjpeg2k_decode.h  nvjpeg2k_encode.cpp
src/: dicom.cpp  dicom.h  helpers.cpp  helpers.h  nvjpeg2k.cpp  nvjpeg2k_decode.cpp  nvjpeg2k_decode.h  nvjpeg2k_encode.cpp  nvjpeg2k_encode.h  pynvjpeg.cpp
tests/: conftest.py  pytest.ini  test_basic.py  test_decode.py  test_encode.py  test_helpers.py  test_jpeg2k_dicom.dcm
