[metadata]
name = pynvjpeg2k
version = 0.1.0
author = Scott Chase Waggener
description = Library for GPU accelerated JPEG2000 decompression
url = "https://github.com/medcognetics/pynvjpeg2k"
keywords = template
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
install_requires = 
    numpy
    pybind11[global]

[options.extras_require]
test = 
  pytest
  pydicom
  Pillow
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120
